--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- External link to font awesome icons (social media icons in the footer and stars and quotation marks on client testimonials page) -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -43,10 +45,12 @@
     <!--*** End Owner: Rahul Saravanabavan *** -->
 	
     <!-------------------
-    - Owner : Helen Plesko
-    - Date  : April 10, 2024
+    - Owner: Helen Plesko
+    - Date: April 10, 2024
 	- Section: PROBLEM STATEMENT
-    - From  : https://www.w3schools.com/html/html_intro.asp (format)
+    - Inspiration: 	layout, https://www.w3schools.com/html/html_intro.asp
+					email links, https://www.w3schools.com/html/tryit.asp?filename=tryhtml_links_email
+					font awesome free icons, https://fontawesome.com/v5/search?m=free
     --------------------->
     <div id="main-content-landing">
         <h1 id="landing-Header">Public Transportation Routing in Lindsay, Ontario</h1>
@@ -55,6 +59,28 @@
     <div id="section-landing">
         <p>Four GIS students at Sir Sandford Fleming College hoping to make taking public transit in Lindsay, Ontario, easier for everyone.</p>
     </div>
+	<div class="row">
+		<div class="column">
+			<p class="name">Athulya Sabu</p>
+			<a href="mailto:athulya.sabu@flemingcollege.ca" class="fas fa-envelope" title="Athulya's Fleming email" target="_blank"></a>
+			<a href="https://twitter.com/" class="fab fa-linkedin" title="Athulya's LinkedIn page" target="_blank"></a>
+		</div>
+		<div class="column">
+			<p class="name">Helen Plesko</p>
+			<a href="mailto:helen.plesko@flemingcollege.ca" class="fas fa-envelope" title="Helen's Fleming email" target="_blank"></a>
+			<a href="https://www.linkedin.com/in/helenplesko/" class="fab fa-linkedin" title="Helen's LinkedIn page" target="_blank"></a>
+		</div>
+		<div class="column">
+			<p class="name">Rahul Saravanabavan</p>
+			<a href="mailto:rahul.saravanabavan@flemingcollege.ca" class="fas fa-envelope" title="Rahul's Fleming email" target="_blank"></a>
+			<a href="https://www.linkedin.com/in/rahulsaravanabavan/" class="fab fa-linkedin" title="Rahul's LinkedIn page" target="_blank"></a>
+		</div>
+		<div class="column">
+			<p class="name">Sharmila Wagle</p>
+			<a href="mailto:sharmila.wagle@flemingcollege.ca" class="fas fa-envelope" title="Sharmila's Fleming email" target="_blank"></a>
+			<a href="https://www.linkedin.com/in/sharmila-wagle/" class="fab fa-linkedin" title="Sharmila's LinkedIn page" target="_blank"></a>
+		</div>
+	</div>
 	
 	<hr class="rounded">
 	
