--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	    <h1><a href="index.html" class="active-page">AHRS Transporation</a></h1>
             <ul class="sidebar">
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="m256-240-56-56 384-384H240v-80h480v480h-80v-344L256-240Z"/></svg></a></li>
-                <li><a href="cartography.html">Cartography</a></li>
+                <li><a href="cartography.html">Steps</a></li>
                 <li><a href="programming.html">Programming</a></li>
                 <li><a href="surveying.html">Surveying And CAD Mapping</a></li>
                 <li><a href="databases.html">DataBase</a></li>
@@ -30,7 +30,7 @@
                 <li><a href="remotesensing.html">Remote Sensing</a></li>
             </ul>
             <ul>
-                <li class="hide"><a href="cartography.html">Cartography</a></li>
+                <li class="hide"><a href="cartography.html">Steps</a></li>
                 <li class="hide"><a href="programming.html">Programming</a></li>
                 <li class="hide"><a href="surveying.html">Surveying And CAD Mapping</a></li>
                 <li class="hide"><a href="databases.html">DataBase</a></li>
