--- a/cartography.html
+++ b/cartography.html
@@ -20,7 +20,7 @@
 	    <h1><a href="index.html">GeoLogic Innovations</a></h1>
             <ul class="sidebar">
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="m256-240-56-56 384-384H240v-80h480v480h-80v-344L256-240Z"/></svg></a></li>
-                <li><a href="cartography.html" class="active-page">Cartography</a></li>
+                <li><a href="cartography.html" class="active-page">Steps</a></li> <!--athulya-->
                 <li><a href="programming.html">Programming</a></li>
                 <li><a href="surveying.html">Surveying And CAD Mapping</a></li>
                 <li><a href="databases.html">DataBase</a></li>
@@ -61,7 +61,7 @@
 <!-------------------This div has the verview of the page -------->
 	<div id="main-content">
         <div class="section">
-            <h2> Unlocking the Power of Spatial Analysis! </h2>
+            <h2> Creating a transit app </h2>
             <h3> Overview </h3>
             <p> 
             Embark on a transformative journey of Spatial Analysis with our team. We specialize in harnessing the transformative capabilities of ArcGIS to 
