--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     --------------------->
 <header>
         <nav>
-            <img src="img/gislogo.png" alt="GIS Logo" class="logo">
+            <img src="img/Buslogo.png" alt="GIS Logo" class="logo">
 	    <h1><a href="index.html" class="active-page">AHRS Transporation</a></h1>
             <ul class="sidebar">
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="m256-240-56-56 384-384H240v-80h480v480h-80v-344L256-240Z"/></svg></a></li>
