--- a/Trials.html
+++ b/Trials.html
@@ -20,9 +20,9 @@
 	    <h1><a href="index.html">GeoLogic Innovations</a></h1>
             <ul class="sidebar">
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="m256-240-56-56 384-384H240v-80h480v480h-80v-344L256-240Z"/></svg></a></li>
-                <li><a href="cartography.html">Cartography</a></li>
-                <li><a href="programming.html" class="active-page">Programming</a></li>
-                <li><a href="surveying.html">Surveying And CAD Mapping</a></li>
+                <li><a href="Steps.html">Steps</a></li>
+                <li><a href="Trials.html" class="active-page">Trials</a></li>
+                <li><a href="Team.html">Team</a></li>
                 <li><a href="databases.html">DataBase</a></li>
                 <li><a href="geodesy.html">Geodesy</a></li>
                 <li><a href="remotesensing.html">Remote Sensing</a></li>
@@ -39,9 +39,9 @@
                 <li><a href="pythonprogramming.html">Problem Solving and Programming</a></li>
             </ul>
             <ul>
-                <li class="hide"><a href="cartography.html">Cartography</a></li>
-                <li class="hide"><a href="programming.html" class="active-page">Programming</a></li>
-                <li class="hide"><a href="surveying.html">Surveying And CAD Mapping</a></li>
+                <li class="hide"><a href="Steps.html">Steps</a></li>
+                <li class="hide"><a href="Trails.html" class="active-page">Trails</a></li>
+                <li class="hide"><a href="Teams.html">Teams</a></li>
                 <li class="hide"><a href="databases.html">DataBase</a></li>
                 <li class="hide"><a href="geodesy.html">Geodesy</a></li>
                 <li class="hide"><a href="remotesensing.html">Remote Sensing</a></li>
