--- a/Trials.html
+++ b/Trials.html
@@ -41,7 +41,7 @@
             <ul>
                 <li class="hide"><a href="Steps.html">Steps</a></li>
                 <li class="hide"><a href="Trails.html" class="active-page">Trails</a></li>
-                <li class="hide"><a href="Teams.html">Teams</a></li>
+                <li class="hide"><a href="Team.html">Team</a></li>
                 <li class="hide"><a href="databases.html">DataBase</a></li>
                 <li class="hide"><a href="geodesy.html">Geodesy</a></li>
                 <li class="hide"><a href="remotesensing.html">Remote Sensing</a></li>
