--- a/attempts.html
+++ b/attempts.html
@@ -116,43 +116,20 @@
     </div>
     <!--*** End Owner: Rahul Saravanabavan *** -->
     	
-    <!------------------
-    - Owner : Tyler Rubini
-    - Date  : Nov 22 (template)
-    - From  : https://www.w3schools.com/tags/tag_footer.asp
-    -------------------->
-    <footer>
-        <div>
-        <h4>Our Team:</h4>
-        </div>
-        <!-- Instructions for column layout adapted from https://www.w3schools.com/howto/howto_css_four_columns.asp -->
-        <div class="row">
-            <div class="column">
-            <p class="name">Jackson Mitchell</p>
-            <a class="email" href="#">Email</a>
-            </div>
-            <div class="column">
-            <p class="name">Thiluxsaan Puvanendran</p>
-            <a class="email" href="#">Email</a>
-            </div>
-            <div class="column">
-            <p class="name">Tyler Rubini</p>
-            <a class="email" href="#">Email</a>
-            </div>
-            <div class="column">
-            <p class="name">Rahul Saravanabavan</p>
-            <a class="email" href="#">Email</a>
-            </div>
-            <div class="column">
-            <p class="name">Parkavi Shanmugam</p>
-            <a class="email" href="#">Email</a>
-            </div>
-        </div>
-        <div id="team">
-        All team members are currently attending Fleming College's GIS Application Specialist post-graduate program.
-        </div>
-    </footer>
-    <!--*** End Owner: Tyler Rubini *** -->
+    <!-- --------------------
+- Owner: 	Helen Plesko
+- Date:		April 10, 2024
+- Section:	FOOTER
+- Inspired By: 	https://www.evarigisconsulting.com/
+				https://www.w3schools.com/html/html_layout.asp
+--------------------- -->
+<footer>
+	<div class="footertext">
+		<p>GEOM99 Web GIS Development | Sir Sandford Fleming College | Winter 2024</p>
+		<p>Copyright 2024 AHRS Transporation</p>
+	</div>
+</footer>
+<!-- *** Helen Footer Section End *** -->
 
 </body>
 </html>
