--- a/attempts.html
+++ b/attempts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> GeoLogic Innovations- Spatial Analysis </title>
+    <title> AHRS Transporation- Attempts </title>
     <link rel="Stylesheet" href="style.css"> 
     <script src="script.js"></script>
     <meta charset="UTF-8">
