--- a/future.html
+++ b/future.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>GeoLogic Innovations - Geodesy </title>
+    <title>AHRS Transporation - Future </title>
     <link rel="Stylesheet" href="style.css"> 
     <script src="script.js"></script>
     <meta charset="UTF-8">
