--- a/solution.html
+++ b/solution.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>GeoLogic Innovations - GIS AutoCAD </title>
+    <title>AHRS Transporation - Solution</title>
     <link rel="Stylesheet" href="style.css"> 
     <script src="script.js"></script>
     <meta charset="UTF-8">
