--- a/team.html
+++ b/team.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>GeoLogic Innovations - GIS Database Principles</title>
+    <title>AHRS Transporation- Team</title>
     <link rel="Stylesheet" href="style.css"> 
     <script src="script.js"></script>
     <meta charset="UTF-8">
