--- a/attempts.html
+++ b/attempts.html
@@ -17,7 +17,7 @@
     <header> <!-------------------This is the navBar for our website which has the links for other pages -------->
         <nav>
             <img src="img/gislogo.png" alt="GIS Logo" class="logo">
-	    <h1><a href="index.html">GeoLogic Innovations</a></h1>
+	    <h1><a href="index.html">AHRS Transporation</a></h1>
             <ul class="sidebar">
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="m256-240-56-56 384-384H240v-80h480v480h-80v-344L256-240Z"/></svg></a></li>
                 <li><a href="solution.html">Solution</a></li>
