--- a/future.html
+++ b/future.html
@@ -14,29 +14,26 @@
     - Date  : Nov 28 (template)
     - From  : https://www.w3schools.com/html/html_intro.asp
     --------------------->
-<header>
+    <header>
         <nav>
             <img src="img/gislogo.png" alt="GIS Logo" class="logo">
-	    <h1><a href="index.html">AHRS Transporation</a></h1>
+	        <h1><a href="index.html">AHRS Transporation</a></h1>
             <ul class="sidebar">
                 <li onclick=hideSidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="m256-240-56-56 384-384H240v-80h480v480h-80v-344L256-240Z"/></svg></a></li>
                 <li><a href="solution.html">Solution</a></li>
-                <li><a href="attempts.html">Attempts</a></li>
-                <li><a href="team.html">Team</a></li>
-                <li><a href="future.html">Future Consideration</a></li>
+				<li><a href="attempts.html">Attempts</a></li>
+				<li><a href="future.html">Future Considerations</a></li>
+				<li><a href="team.html">Team</a></li>
             </ul>
-
             <ul>
                 <li><a href="solution.html">Solution</a></li>
-                <li><a href="attempts.html">Attempts</a></li>
-                <li><a href="team.html">Team</a></li>
-                <li><a href="future.html">Future Consideration</a></li>
+				<li><a href="attempts.html">Attempts</a></li>
+				<li><a href="future.html">Future Considerations</a></li>
+				<li><a href="team.html">Team</a></li>
                 <li class="hamburger-button" onclick=showSidebar() ><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="M120-240v-80h520v80H120Zm664-40L584-480l200-200 56 56-144 144 144 144-56 56ZM120-440v-80h400v80H120Zm0-200v-80h520v80H120Z"/></svg></a></li>
             </ul>
         </nav>
     </header>
-
-
     <!--*** End Owner: Rahul Saravanabavan *** -->
 	
     <!-------------------
