--- a/future.html
+++ b/future.html
@@ -54,7 +54,7 @@
             <h2>Future Considerations</h2>
             <h3>Overview</h3>
             <p> 
-				Public Transit is very important especially in place like Lindsay with College with International Students and extreme weather. Even though there are good public transit services available there is not proper way to access these services like using google maps. We as a student have tried to make these services more accessible but due to time and skill sets and course scope restrictions there still are a lot of things that can be improved.  
+				Public Transit is very important especially in place like Lindsay with College where hundreds of International Students come every year and extreme weather especially during winter. Even though there are good public transit services available there is not proper way to access these services like using google maps. We as a student have tried to make these services more accessible but due to time, skill sets and course scope restrictions there still are a lot of things that can be improved.  
 				
 			</p>
 			
