adding font awesome

--- a/team.html
+++ b/team.html
@@ -6,6 +6,8 @@
     <script src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- External link to font awesome icons (social media icons in the footer and stars and quotation marks on client testimonials page) -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
