--- a/team.html
+++ b/team.html
@@ -49,22 +49,22 @@
     
 	<div class="row">
 		<div class="column">
-			<h3 class="name">Athulya Sabu</h3>
+			<h3>Athulya Sabu</h3>
 			<a href="mailto:athulya.sabu@flemingcollege.ca" class="fas fa-envelope" title="Athulya's Fleming email" target="_blank"></a>
 			<a href="https://twitter.com/" class="fab fa-linkedin" title="Athulya's LinkedIn page" target="_blank"></a>
 		</div>
 		<div class="column">
-			<h3 class="name">Helen Plesko</h3>
+			<h3>Helen Plesko</h3>
 			<a href="mailto:helen.plesko@flemingcollege.ca" class="fas fa-envelope" title="Helen's Fleming email" target="_blank"></a>
 			<a href="https://www.linkedin.com/in/helenplesko/" class="fab fa-linkedin" title="Helen's LinkedIn page" target="_blank"></a>
 		</div>
 		<div class="column">
-			<h3 class="name">Rahul Saravanabavan</h3>
+			<h3>Rahul Saravanabavan</h3>
 			<a href="mailto:rahul.saravanabavan@flemingcollege.ca" class="fas fa-envelope" title="Rahul's Fleming email" target="_blank"></a>
 			<a href="https://www.linkedin.com/in/rahulsaravanabavan/" class="fab fa-linkedin" title="Rahul's LinkedIn page" target="_blank"></a>
 		</div>
 		<div class="column">
-			<h3 class="name">Sharmila Wagle</h3>
+			<h3>Sharmila Wagle</h3>
 			<a href="mailto:sharmila.wagle@flemingcollege.ca" class="fas fa-envelope" title="Sharmila's Fleming email" target="_blank"></a>
 			<a href="https://www.linkedin.com/in/sharmila-wagle/" class="fab fa-linkedin" title="Sharmila's LinkedIn page" target="_blank"></a>
 		</div>
